Change Vim plugin to focus on coc

--- a/.vim/rc/dein_lazy.toml
+++ b/.vim/rc/dein_lazy.toml
@@ -2,7 +2,7 @@
 # Gundo
 repo = "sjl/gundo.vim"
 
-[[plugins]]
-# python
-repo = "lambdalisue/vim-pyenv"
-on_ft = ["python", "python3", "djangohtml"]
+#[[plugins]]
+## python
+#repo = "lambdalisue/vim-pyenv"
+#on_ft = ["python", "python3", "djangohtml"]
