--- a/.vim/rc/dein.toml
+++ b/.vim/rc/dein.toml
@@ -64,45 +64,62 @@ hook_add = '''
 '''
 
 [[plugins]]
-repo = 'prabirshrestha/vim-lsp'
+# coc
+repo = 'neoclide/coc.nvim'
+rev = 'release'
+merged = 0
 hook_add = '''
-    let g:lsp_async_completion = 1
-    let g:lsp_fold_enabled = 0
-    let g:lsp_signs_enabled = 1
-    let g:lsp_diagnostics_enabled = 1
-    let g:lsp_diagnostics_echo_cursor = 1
-    let g:lsp_virtual_text_enabled = 1
-    let g:lsp_signs_error = {'text': '💩'}
-    let g:lsp_signs_warning = {'text': '⚠️'}
-    let g:lsp_signs_information = {'text': '📖'}
-    let g:lsp_signs_hint = {'text': '?'}
+    " display coc status on airline
+    " :h coc-status-airline
+    let g:airline#extensions#coc#enabled = 0
 '''
 
-[[plugins]]
-repo = 'mattn/vim-lsp-settings'
 
 [[plugins]]
-repo = 'prabirshrestha/asyncomplete.vim'
-hook_add = '''
-    let g:asyncomplete_auto_popup = 1
-    let g:asyncomplete_auto_completeopt = 1
-    let g:asyncomplete_popup_delay = 400
-'''
+# toml
+repo = "cespare/vim-toml"
+on_ft = ["toml"]
 
-[[plugins]]
-repo = 'prabirshrestha/asyncomplete-lsp.vim'
+#[[plugins]]
+#repo = 'prabirshrestha/vim-lsp'
+#hook_add = '''
+#    let g:lsp_async_completion = 1
+#    let g:lsp_fold_enabled = 0
+#    let g:lsp_signs_enabled = 1
+#    let g:lsp_diagnostics_enabled = 1
+#    let g:lsp_diagnostics_echo_cursor = 1
+#    let g:lsp_virtual_text_enabled = 1
+#    let g:lsp_signs_error = {'text': '💩'}
+#    let g:lsp_signs_warning = {'text': '⚠️'}
+#    let g:lsp_signs_information = {'text': '📖'}
+#    let g:lsp_signs_hint = {'text': '?'}
+#'''
 
-[[plugins]]
-repo = 'hrsh7th/vim-vsnip'
+#[[plugins]]
+#repo = 'mattn/vim-lsp-settings'
 
-[[plugins]]
-repo = 'hrsh7th/vim-vsnip-integ'
+#[[plugins]]
+#repo = 'prabirshrestha/asyncomplete.vim'
+#hook_add = '''
+#    let g:asyncomplete_auto_popup = 1
+#    let g:asyncomplete_auto_completeopt = 1
+#    let g:asyncomplete_popup_delay = 400
+#'''
 
-[[plugins]]
-# Unite
-repo = "Shougo/unite.vim"
+#[[plugins]]
+#repo = 'prabirshrestha/asyncomplete-lsp.vim'
 
-[[plugins]]
-# Unite outline
-repo = 'h1mesuke/unite-outline'
-
+#[[plugins]]
+#repo = 'hrsh7th/vim-vsnip'
+#
+#[[plugins]]
+#repo = 'hrsh7th/vim-vsnip-integ'
+#
+#[[plugins]]
+## Unite
+#repo = "Shougo/unite.vim"
+#
+#[[plugins]]
+## Unite outline
+#repo = 'h1mesuke/unite-outline'
+#
