--- a/.vim/coc-settings.json
+++ b/.vim/coc-settings.json
@@ -12,5 +12,9 @@
 
   "diagnostic.errorSign": "💩",
   "diagnostic.warningSign": "⚠️",
-  "diagnostic.infoSign": "💡"
+  "diagnostic.infoSign": "💡",
+
+  // To prevent completion when typing in the IME,
+  // set to not complete until the third character is typed
+  "suggest.minTriggerInputLength": 3
 }
