--- a/.vim/rc/dein.toml
+++ b/.vim/rc/dein.toml
@@ -72,6 +72,7 @@ hook_add = '''
     " display coc status on airline
     " :h coc-status-airline
     let g:airline#extensions#coc#enabled = 0
+    let g:coc_node_path = '/opt/homebrew/bin/node'
 '''
 
 
