--- a/.vim/rc/dein.toml
+++ b/.vim/rc/dein.toml
@@ -64,7 +64,7 @@ hook_add = '''
 '''
 
 [[plugins]]
-# coc
+# coc and coc plug-ins
 repo = 'neoclide/coc.nvim'
 rev = 'release'
 merged = 0
@@ -73,6 +73,7 @@ hook_add = '''
     " :h coc-status-airline
     let g:airline#extensions#coc#enabled = 0
     let g:coc_node_path = '/opt/homebrew/bin/node'
+    let g:coc_global_extensions = ['coc-json', 'coc-snippets']
 '''
 
 
