--- a/.vim/coc-settings.json
+++ b/.vim/coc-settings.json
@@ -1,20 +1,25 @@
 {
-  "languageserver": {
-    "elmLS": {
-      "command": "elm-language-server",
-      "filetypes": ["elm"],
-      "rootPatterns": ["elm.json"]
-    }
-  },
+    "languageserver": {
+        "efm": {
+            "command": "efm-langserver",
+            "args": [],
+            "filetypes": ["markdown", "text"]
+        },
+        "elmLS": {
+            "command": "elm-language-server",
+            "filetypes": ["elm"],
+            "rootPatterns": ["elm.json"]
+        }
+    },
 
-  // If you use neovim you can enable codelenses with this
-  "codeLens.enable": true,
+    // If you use neovim you can enable codelenses with this
+    "codeLens.enable": true,
 
-  "diagnostic.errorSign": "💩",
-  "diagnostic.warningSign": "⚠️",
-  "diagnostic.infoSign": "💡",
+    "diagnostic.errorSign": "💩",
+    "diagnostic.warningSign": "⚠️",
+    "diagnostic.infoSign": "💡",
 
-  // To prevent completion when typing in the IME,
-  // set to not complete until the third character is typed
-  "suggest.minTriggerInputLength": 3
+    // To prevent completion when typing in the IME,
+    // set to not complete until the third character is typed
+    "suggest.minTriggerInputLength": 3
 }
