--- a/.vim/rc/dein.toml
+++ b/.vim/rc/dein.toml
@@ -70,10 +70,11 @@ rev = 'release'
 merged = 0
 hook_add = '''
     " display coc status on airline
-    " :h coc-status-airline
+    " :help coc-status-airline
+    "
     let g:airline#extensions#coc#enabled = 1
     let g:coc_node_path = '/opt/homebrew/bin/node'
-    let g:coc_global_extensions = ['coc-json', 'coc-snippets']
+    let g:coc_global_extensions = [ 'coc-css', 'coc-cssmodules', 'coc-html', 'coc-htmlhint', 'coc-json', 'coc-markdownlint', 'coc-pydocstring', 'coc-pyright', 'coc-sh', 'coc-snippets', 'coc-sql', 'coc-yaml' ]
 '''
 
 
